# MediaGo

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindFFmpeg.cmake
devtools/: CMakeLists.txt  diag.cpp  diag.h  diag_main.cpp
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: FileUploader.vue  ProbeResult.vue  ProgressPanel.vue
frontend/src/composables/: useSSE.ts
frontend/src/router/: index.ts
frontend/src/styles/: main.css
frontend/src/views/: BatchPage.vue  ProbePage.vue
scripts/: setup_ffmpeg.ps1
src/: diag_main.cpp  main.cpp  main_server.cpp
src/core/: batch.cpp  batch.h  config.cpp  config.h  encoder.cpp  encoder.h  media_io.cpp  media_io.h  transcode_config.h  transcode_engine.cpp  transcode_engine.h  transcoder.cpp  transcoder.h
src/server/: http_server.cpp  http_server.h
